--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -75,7 +75,7 @@
         <mockito.version>3.7.7</mockito.version>
         <skipITs>true</skipITs>
 
-        <querqy.core.version>3.10.0</querqy.core.version>
+        <querqy.core.version>3.11.0-SNAPSHOT</querqy.core.version>
         <lucene.version>8.1.0</lucene.version>
         <minidev.json-smart.version>2.3</minidev.json-smart.version>
         <commons.io.version>2.5</commons.io.version>
