--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>5.0.lucene800.1</version>
+        <version>5.1.lucene800.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
