--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>5.0.lucene720.1</version>
+        <version>5.1.lucene720.0-SNAPSHOT</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
 
