--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -24,6 +24,23 @@
         </license>
     </licenses>
 
+    <repositories>
+        <!--
+            Trying to avoiding Maven @ GitHub Build error
+
+            Failed to collect dependencies at org.apache.solr:solr-test-framework:jar:8.1.0 ->
+            org.restlet.jee:org.restlet:jar:2.3.0: Failed to read artifact descriptor for
+            org.restlet.jee:org.restlet:jar:2.3.0: Could not transfer artifact org.restlet.jee:org.restlet:pom:2.3.0
+            from/to maven-default-http-blocker (http://0.0.0.0/): Blocked mirror for repositories:
+            [maven-restlet (http://maven.restlet.org, default, releases+snapshots)
+        -->
+        <repository>
+            <id>maven-restlet</id>
+            <name>Public online Restlet repository</name>
+            <url>https://maven.restlet.com</url>
+        </repository>
+    </repositories>
+
     <developers>
         <developer>
             <id>renekrie</id>
