--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -149,6 +149,7 @@
                 <configuration>
                     <systemPropertyVariables>
                         <tests.codec>Lucene80</tests.codec>
+                        <java.security.egd>file:/dev/./urandom</java.security.egd>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
