--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,6 @@
 version: 2
 updates:
   - package-ecosystem: "maven"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 20
-  - package-ecosystem: "maven"
     directory: "/querqy-core"
     schedule:
       interval: "weekly"
@@ -20,8 +15,14 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 20
+    ignore:
+      - dependency-name: "solr*"
+      - dependency-name: "lucene*"
   - package-ecosystem: "maven"
     directory: "/querqy-for-lucene/querqy-solr"
     schedule:
       interval: "weekly"
+    ignore:
+      - dependency-name: "solr*"
+      - dependency-name: "lucene*"
     open-pull-requests-limit: 20
