--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,9 @@ updates:
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 20
+    ignore:
+      - dependency-name: "solr*"
+      - dependency-name: "lucene*"
   - package-ecosystem: "maven"
     directory: "/querqy-for-lucene/querqy-lucene"
     schedule:
