--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.querqy</groupId>
     <artifactId>querqy-multimodule</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>5.3.lucene810.0-patch-osc-german-compounding-morphology-1.1</version>
     <packaging>pom</packaging>
 
     <!--
