--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>5.4.lucene810.0-SNAPSHOT</version>
+        <version>5.4.lucene900.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -15,7 +15,7 @@
 
     <properties>
         <minidev.json-smart.version>2.3</minidev.json-smart.version>
-        <slf4j.version>1.7.26</slf4j.version>
+        <slf4j.version>1.7.35</slf4j.version>
         <testcontainers.version>1.17.1</testcontainers.version>
     </properties>
 
@@ -31,13 +31,13 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+      <!--  <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons.io.version}</version>
             <scope>provided</scope>
         </dependency>
-
+-->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>querqy-lucene</artifactId>
@@ -88,7 +88,8 @@
         <dependency>
             <!-- needed by solr-test-framework -->
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
+           <!-- <artifactId>slf4j-log4j12</artifactId>-->
+            <artifactId>slf4j-reload4j</artifactId>
             <version>${slf4j.version}</version>
             <scope>test</scope>
         </dependency>
@@ -173,7 +174,7 @@
                         <project.build.directory>${project.build.directory}</project.build.directory>
                         <project.build.finalName>${project.build.finalName}</project.build.finalName>
                         <project.version>${project.version}</project.version>
-                        <solr.test.versions>solr:8.11,solr:8.10,solr:8.9,solr:8.8,solr:8.7,solr:8.6,solr:8.5,solr:8.4,solr:8.3,solr:8.2,solr:8.1</solr.test.versions>
+                        <solr.test.versions>solr:9.0</solr.test.versions>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
