Fixes #346: Use UTF-8 instead of system default charset * Removing the default charset hack in tests as it does not compile on newer (at least 16+) JDKs * Setting US-ASCII as the default charset during test execution to increase chance of catching bugs from code that (transitively) uses Charset#defaultCharset()

--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -122,6 +122,9 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <excludedGroups>querqy.solr.it.IntegrationTest</excludedGroups>
+                    <!-- Use narrow US-ASCII as default Java character set (via file.encoding system property)
+                         to increase the chance of catching code that relies on the JDK default encoding -->
+                    <argLine>-Dfile.encoding=US-ASCII</argLine>
                 </configuration>
             </plugin>
 
