--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -147,6 +147,9 @@
                     <systemPropertyVariables>
                         <tests.codec>Lucene90</tests.codec>
                         <java.security.egd>file:/dev/./urandom</java.security.egd>
+                        <!-- Use narrow US-ASCII as default Java character set (via file.encoding system property)
+                        to increase the chance of catching code that relies on the JDK default encoding -->
+                        <argLine>-Dfile.encoding=US-ASCII</argLine>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
