--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -66,7 +66,7 @@
         <url>git@github.com:querqy/querqy.git</url>
         <connection>scm:git:git@github.com:querqy/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:querqy/querqy.git</developerConnection>
-        <tag>querqy-for-lucene-5.3.lucene810.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <prerequisites>
@@ -86,7 +86,7 @@
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <junit.version>4.13.2</junit.version>
         <hamcrest.version>2.1</hamcrest.version>
         <mockito.version>4.6.1</mockito.version>
@@ -161,7 +161,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
-                        <release>11</release>
+                        <release>${java.version}</release>
                         <showDeprecation>true</showDeprecation>
                     </configuration>
                 </plugin>
