--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -181,7 +181,7 @@
                         <project.build.directory>${project.build.directory}</project.build.directory>
                         <project.build.finalName>${project.build.finalName}</project.build.finalName>
                         <project.version>${project.version}</project.version>
-                        <solr.test.versions>solr:9.0</solr.test.versions>
+                        <solr.test.versions>solr:9.1,solr:9.0</solr.test.versions>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
