--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>5.6.lucene811.0-SNAPSHOT</version>
+        <version>5.5.lucene811.0</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
 
