Changed querqy-core in querqy-for-lucene/pom.xml to SNAPSHOT

--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -92,7 +92,7 @@
         <mockito.version>4.9.0</mockito.version>
         <skipITs>true</skipITs>
 
-        <querqy.core.version>3.16.0</querqy.core.version>
+        <querqy.core.version>3.17.0-SNAPSHOT</querqy.core.version>
         <lucene.version>9.0.0</lucene.version>
         <commons.io.version>2.11.0</commons.io.version>
 
