--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
         <relativePath>../pom.xml</relativePath>
-        <version>5.7.lucene900.0-SNAPSHOT</version>
+        <version>5.7.lucene942.0-SNAPSHOT</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
 
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-test-framework</artifactId>
-            <version>${lucene.version}</version>
+            <version>${solr.version}</version>
             <scope>test</scope>
         </dependency>
 -->
