--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -14,8 +14,8 @@
     <description>Querqy library for query rewriting for Solr</description>
 
     <properties>
-        <minidev.json-smart.version>2.4.8</minidev.json-smart.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <minidev.json-smart.version>2.4.10</minidev.json-smart.version>
+        <slf4j.version>2.0.7</slf4j.version>
         <solr.version>9.2.0</solr.version>
         <testcontainers.version>1.17.6</testcontainers.version>
     </properties>
@@ -91,13 +91,26 @@
         </dependency>
 
         <dependency>
-            <!-- needed by solr-test-framework -->
-            <groupId>org.slf4j</groupId>
-           <!-- <artifactId>slf4j-log4j12</artifactId>-->
-            <artifactId>slf4j-reload4j</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.20.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.20.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.20.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- testcontainers integration tests -->
         <dependency>
