--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -9,19 +9,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Cache maven deps
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: maven-11-${{ hashFiles('**/pom.xml') }}
+    - uses: actions/checkout@v3
 
     - name: Select JDK
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
+        distribution: 'zulu'
         java-version: 11
+        cache: 'maven'
     
     - name: Integration Tests
-      run: mvn verify -DskipITs=false --file pom.xml
+      run: mvn --batch-mode verify -DskipITs=false --file pom.xml
 
