--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -75,7 +75,7 @@
         <mockito.version>5.11.0</mockito.version>
         <skipITs>true</skipITs>
 
-        <querqy.core.version>3.17.0</querqy.core.version>
+        <querqy.core.version>3.18.0-SNAPSHOT</querqy.core.version>
         <lucene.version>9.8.0</lucene.version>
         <commons.io.version>2.14.0</commons.io.version>
 
