--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>5.8.lucene942.0-SNAPSHOT</version>
+        <version>5.8.lucene9110.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -195,7 +195,7 @@
                         <project.build.directory>${project.build.directory}</project.build.directory>
                         <project.build.finalName>${project.build.finalName}</project.build.finalName>
                         <project.version>${project.version}</project.version>
-                        <solr.test.versions>solr:9.4,solr:9.3,solr:9.2,solr:9.1,solr:9.0</solr.test.versions>
+                        <solr.test.versions>solr:9.6,solr:9.5,solr:9.4,solr:9.3,solr:9.2,solr:9.1,solr:9.0</solr.test.versions>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
