--- a/querqy-for-lucene/pom.xml
+++ b/querqy-for-lucene/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.querqy</groupId>
     <artifactId>querqy-for-lucene</artifactId>
-    <version>5.8.lucene9110.0-SNAPSHOT</version>
+    <version>5.7.lucene961.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -75,7 +75,7 @@
         <mockito.version>5.11.0</mockito.version>
         <skipITs>true</skipITs>
 
-        <querqy.core.version>3.18.0-SNAPSHOT</querqy.core.version>
+        <querqy.core.version>3.17.0</querqy.core.version>
         <lucene.version>9.11.1</lucene.version>
         <commons.io.version>2.14.0</commons.io.version>
 
