--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -14,7 +14,7 @@
     <description>Querqy library for query rewriting for Solr</description>
 
     <properties>
-        <minidev.json-smart.version>2.5.0</minidev.json-smart.version>
+        <minidev.json-smart.version>2.5.2</minidev.json-smart.version>
         <log4j.version>2.21.1</log4j.version>
         <slf4j.version>2.0.13</slf4j.version>
         <solr.version>9.8.0</solr.version>
@@ -73,6 +73,13 @@
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
             <version>${minidev.json-smart.version}</version>
+            <exclusions>
+                <!-- exclude ASM b/c of conflict with version provided by Lucene -->
+                <exclusion>
+                    <groupId>org.ow2.asm</groupId>
+                    <artifactId>asm</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
