--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jdk: [ 11, 17, 18, 19, 20 ]
+        jdk: [ 21, 22, 23, 24 ]
 
     runs-on: ubuntu-latest
 
